--- a/libs/clients/vehicles/src/clientConfig.json
+++ b/libs/clients/vehicles/src/clientConfig.json
@@ -9,31 +9,13 @@
       "email": "samgongustofa@samgongustofa.is"
     },
     "version": "v1",
-    "x-category": [
-      "personal",
-      "official"
-    ],
-    "x-pricing": [
-      "free",
-      "paid"
-    ],
+    "x-category": ["personal", "official"],
+    "x-pricing": ["free", "paid"],
     "x-links": [
-      [
-        "documentation",
-        "https://www.samgongustofa.is/"
-      ],
-      [
-        "responsibleParty",
-        "mailto:samgongustofa@samgongustofa.is"
-      ],
-      [
-        "bugReport",
-        "https://www.samgongustofa.is/"
-      ],
-      [
-        "featureRequest",
-        "https://www.samgongustofa.is/"
-      ]
+      ["documentation", "https://www.samgongustofa.is/"],
+      ["responsibleParty", "mailto:samgongustofa@samgongustofa.is"],
+      ["bugReport", "https://www.samgongustofa.is/"],
+      ["featureRequest", "https://www.samgongustofa.is/"]
     ]
   },
   "servers": [
@@ -44,9 +26,7 @@
   "paths": {
     "/SearchesRemaining": {
       "get": {
-        "tags": [
-          "VehicleSearch"
-        ],
+        "tags": ["VehicleSearch"],
         "responses": {
           "200": {
             "description": "Success",
@@ -68,18 +48,14 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "OAuth2"
-            ]
+            "OAuth2": ["OAuth2"]
           }
         ]
       }
     },
     "/VehicleSearch": {
       "get": {
-        "tags": [
-          "VehicleSearch"
-        ],
+        "tags": ["VehicleSearch"],
         "parameters": [
           {
             "name": "search",
@@ -135,18 +111,14 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "OAuth2"
-            ]
+            "OAuth2": ["OAuth2"]
           }
         ]
       }
     },
     "/BasicVehicleInformation": {
       "get": {
-        "tags": [
-          "VehicleSearch"
-        ],
+        "tags": ["VehicleSearch"],
         "parameters": [
           {
             "name": "clientPersidno",
@@ -207,18 +179,14 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "OAuth2"
-            ]
+            "OAuth2": ["OAuth2"]
           }
         ]
       }
     },
     "/VehicleHistory": {
       "get": {
-        "tags": [
-          "VehicleSearch"
-        ],
+        "tags": ["VehicleSearch"],
         "parameters": [
           {
             "name": "requestedPersidno",
@@ -298,18 +266,14 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "OAuth2"
-            ]
+            "OAuth2": ["OAuth2"]
           }
         ]
       }
     },
     "/AdditionalVehicleInformation": {
       "get": {
-        "tags": [
-          "VehicleSearch"
-        ],
+        "tags": ["VehicleSearch"],
         "parameters": [
           {
             "name": "clientPersidno",
@@ -370,9 +334,7 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "OAuth2"
-            ]
+            "OAuth2": ["OAuth2"]
           }
         ]
       }
@@ -2379,7 +2341,5 @@
       }
     }
   },
-  "security": [
-    {}
-  ]
+  "security": [{}]
 }
