--- a/libs/clients/vehicles/project.json
+++ b/libs/clients/vehicles/project.json
@@ -21,9 +21,7 @@
       "executor": "@nrwl/workspace:run-commands",
       "options": {
         "commands": [
-          "yarn openapi-generator -o libs/clients/vehicles/gen/fetch -i libs/clients/vehicles/src/clientConfig.json",
-          "cat <<< $(jq '.components.schemas.ProblemDetails.additionalProperties = false' libs/clients/vehicles/src/clientConfig.json) > libs/clients/vehicles/src/clientConfig.json",
-          "prettier --write libs/clients/vehicles/src/clientConfig.json"
+          "yarn openapi-generator -o libs/clients/vehicles/gen/fetch -i libs/clients/vehicles/src/clientConfig.json"
         ]
       }
     }
