Fixing broken things

--- a/apps/system-e2e/.babelrc
+++ b/apps/system-e2e/.babelrc
@@ -1,4 +1,12 @@
 {
-  "presets": ["@nrwl/web/babel", "next/babel", "../../libs/shared/babel/web", "@babel/preset-env", "@babel/preset-typescript"],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "presets": [
+    "@nrwl/web/babel",
+    "next/babel",
+    "../../libs/shared/babel/web",
+    "@babel/preset-env",
+    "@babel/preset-typescript"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
