test: use types from shared libs, fix loftbru goto button bug

--- a/scripts/ci/Dockerfile.cypress
+++ b/scripts/ci/Dockerfile.cypress
@@ -170,7 +170,7 @@ USER runner
 
 WORKDIR /app
 
-RUN npm install typescript cypress@10
+RUN npm install typescript cypress@10 @testing-library/cypress
 
 ARG APP_HOME
 
