--- a/apps/system-e2e/project.json
+++ b/apps/system-e2e/project.json
@@ -9,7 +9,7 @@
       "builder": "@nrwl/node:webpack",
       "options": {
         "outputPath": "dist/apps/system-e2e",
-        "main": "apps/system-e2e/src/does-not-matter-one-bit.ts",
+        "main": "",
         "tsConfig": "apps/system-e2e/tsconfig.json",
         "webpackConfig": "apps/system-e2e/webpack.config.js",
         "maxWorkers": 2,
@@ -30,11 +30,20 @@
         "lintFilePatterns": ["apps/system-e2e/**/*.{ts,tsx,js,jsx}"]
       }
     },
-    "system-test": {
+    "smoke-test": {
       "executor": "@nrwl/cypress:cypress",
       "options": {
         "cypressConfig": "apps/system-e2e/cypress.config.ts",
-        "tsConfig": "apps/system-e2e/tsconfig.json"
+        "tsConfig": "apps/system-e2e/tsconfig.json",
+        "spec": "**/integration/**/smoke-test/*.spec.{ts,js}"
+      }
+    },
+    "acceptance-test": {
+      "executor": "@nrwl/cypress:cypress",
+      "options": {
+        "cypressConfig": "apps/system-e2e/cypress.config.ts",
+        "tsConfig": "apps/system-e2e/tsconfig.json",
+        "spec": "**/integration/**/acceptance-test/*.spec.{ts,js}"
       }
     },
     "docker-cypress": {}
