--- a/libs/clients/vehicles/src/clientConfig.json
+++ b/libs/clients/vehicles/src/clientConfig.json
@@ -42,7 +42,44 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/IActionResult"
+                  "$ref": "#/components/schemas/File"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "OAuth2": ["OAuth2"]
+          }
+        ]
+      }
+    },
+    "/OwnershipReportPdf": {
+      "get": {
+        "tags": ["Pdf"],
+        "parameters": [
+          {
+            "name": "ssn",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/File"
                 }
               }
             }
@@ -183,6 +220,14 @@
             "in": "query",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "getFees",
+            "in": "query",
+            "schema": {
+              "type": "boolean",
+              "default": true
             }
           }
         ],
@@ -2018,7 +2063,7 @@
         },
         "additionalProperties": false
       },
-      "IActionResult": {
+      "File": {
         "type": "object",
         "additionalProperties": false
       },
