--- a/scripts/ci/Dockerfile.cypress.new
+++ b/scripts/ci/Dockerfile.cypress.new
@@ -1,12 +1,100 @@
-FROM cypress/included:10.2.0
+FROM cypress/base:14.17.6
+
+USER root
+
+RUN node --version
+
+# Chrome dependencies
+RUN apt-get update && \
+  apt-get install -y \
+  fonts-liberation \
+  libcurl4 \
+  libcurl3-gnutls \
+  libcurl3-nss \
+  xdg-utils \
+  wget \
+  curl \
+  # clean up
+  && rm -rf /var/lib/apt/lists/* \
+  && apt-get clean
+
+# install libappindicator3-1 - not included with Debian 11
+RUN wget --no-verbose /usr/src/libappindicator3-1_0.4.92-7_amd64.deb "http://ftp.us.debian.org/debian/pool/main/liba/libappindicator/libappindicator3-1_0.4.92-7_amd64.deb" && \
+  dpkg -i /usr/src/libappindicator3-1_0.4.92-7_amd64.deb ; \
+  apt-get install -f -y && \
+  rm -f /usr/src/libappindicator3-1_0.4.92-7_amd64.deb
+
+# install Chrome browser
+RUN wget --no-verbose -O /usr/src/google-chrome-stable_current_amd64.deb "http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_100.0.4896.60-1_amd64.deb" && \
+  dpkg -i /usr/src/google-chrome-stable_current_amd64.deb ; \
+  apt-get install -f -y && \
+  rm -f /usr/src/google-chrome-stable_current_amd64.deb
+
+# "fake" dbus address to prevent errors
+# https://github.com/SeleniumHQ/docker-selenium/issues/87
+
+ENV CI=1 \
+# disable shared memory X11 affecting Cypress v4 and Chrome
+# https://github.com/cypress-io/cypress-docker-images/issues/270
+  DBUS_SESSION_BUS_ADDRESS=/dev/null \
+  QT_X11_NO_MITSHM=1 \
+  _X11_NO_MITSHM=1 \
+  _MITSHM=0 \
+  # point Cypress at the /root/cache no matter what user account is used
+  # see https://on.cypress.io/caching
+  CYPRESS_CACHE_FOLDER=/root/.cache/Cypress \
+  # Allow projects to reference globally installed cypress
+  NODE_PATH=/usr/local/lib/node_modules
+
+RUN echo "whoami: $(whoami)" \
+  && npm config -g set user $(whoami) \
+  # command "id" should print:
+  # uid=0(root) gid=0(root) groups=0(root)
+  # which means the current user is root
+  && id \
+  && npm install -g "cypress@10.2.0" \
+  && npm install --save-dev "@testing-library/cypress" \
+  && cypress verify \
+  # Cypress cache and installed version
+  # should be in the root user's home folder
+  && cypress cache path \
+  && cypress cache list \
+  && cypress info \
+  && cypress version \
+  # give every user read access to the "/root" folder where the binary is cached
+  # we really only need to worry about the top folder, fortunately
+  && ls -la /root \
+  && chmod 755 /root \
+  # always grab the latest Yarn
+  # otherwise the base image might have old versions
+  # NPM does not need to be installed as it is already included with Node.
+  && npm i -g yarn@latest \
+  # Show where Node loads required modules from
+  && node -p 'module.paths' \
+  # should print Cypress version
+  # plus Electron and bundled Node versions
+  && cypress version \
+  && echo  " node version:    $(node -v) \n" \
+    "npm version:     $(npm -v) \n" \
+    "yarn version:    $(yarn -v) \n" \
+    "debian version:  $(cat /etc/debian_version) \n" \
+    "user:            $(whoami) \n" \
+    "chrome:          $(google-chrome --version || true) \n"
+
+# a few environment variables to make NPM installs easier
+# good colors for most applications
+ENV TERM xterm \
+# avoid million NPM install messages
+ENV npm_config_loglevel warn \
+# allow installing when the main user is root
+ENV npm_config_unsafe_perm true
+
 
 
 ARG APP
-ARG APP_HOME
 ARG APP_DIST_HOME
 
 ENV APP=${APP}
-ENV APP_HOME=${APP_HOME}
 ENV APP_DIST_HOME=${APP_DIST_HOME}
 
 ENV TEST_ENVIRONMENT=dev
@@ -14,7 +102,8 @@ ENV CYPRESS_VIDEOS_FOLDER=/out/videos
 ENV CYPRESS_SCREENSHOTS_FOLDER=/out/screenshots
 ENV CYPRESS_DOWNLOADS_FOLDER=/out/downloads
 
-RUN touch cachebust07
-COPY ${APP_HOME}/ /app/${APP}
+
 COPY ${APP_DIST_HOME}/ /${APP_DIST_HOME}
-RUN ls -al /app /app/${APP} /${APP_DIST_HOME}
+RUN ls -al /${APP_DIST_HOME}
+
+ENTRYPOINT ["cypress", "run", "--browser", "chrome"]
