--- a/scripts/ci/Dockerfile.cypress
+++ b/scripts/ci/Dockerfile.cypress
@@ -1,109 +1,19 @@
-#
-# This cypress image is very similar to https://hub.docker.com/r/cypress/included.
-# Because it is based on debian buster it has many security vulnerabilities.
-# That is why we need this custom dockerfile which uses ubuntu as its base
-# instead of debian. The cypress docker image logic has been duplicated here and
-# there are references above each FROM statement to the source.
-#
-ARG DOCKER_IMAGE_REGISTRY=public.ecr.aws
-
-FROM $DOCKER_IMAGE_REGISTRY/docker/library/buildpack-deps:kinetic-curl as node-base
-
-RUN apt-get update \
-  && apt-get install -y nodejs npm \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
-RUN npm install -g n yarn
-RUN n install 14.17.0
-
-# https://github.com/cypress-io/cypress-docker-images/blob/master/base/14.19.0/Dockerfile
-FROM node-base as cypress-base
-
-RUN apt-get update && \
-  apt-get install --no-install-recommends -y \
-  libgtk2.0-0 \
-  libgtk-3-0 \
-  libnotify-dev \
-  libgconf-2-4 \
-  libgbm-dev \
-  libnss3 \
-  libxss1 \
-  libasound2 \
-  libxtst6 \
-  xauth \
-  xvfb \
-  # install text editors
-  vim-tiny \
-  nano \
-  # install emoji font
-  fonts-noto-color-emoji \
-  # install Chinese fonts
-  # this list was copied from https://github.com/jim3ma/docker-leanote
-  fonts-arphic-bkai00mp \
-  fonts-arphic-bsmi00lp \
-  fonts-arphic-gbsn00lp \
-  fonts-arphic-gkai00mp \
-  fonts-arphic-ukai \
-  fonts-arphic-uming \
-  ttf-wqy-zenhei \
-  ttf-wqy-microhei \
-  xfonts-wqy \
-  # clean up
-  && rm -rf /var/lib/apt/lists/* \
-  && apt-get clean
-
-RUN npm --version
-
-RUN npm install -g yarn@latest --force
-RUN yarn --version
-
-# a few environment variables to make NPM installs easier
-# good colors for most applications
-ENV TERM xterm
-# avoid million NPM install messages
-ENV npm_config_loglevel warn
-# allow installing when the main user is root
-ENV npm_config_unsafe_perm true
-
-# Node libraries
-RUN node -p process.versions
-
-# Show where Node loads required modules from
-RUN node -p 'module.paths'
-
-# versions of local tools
-RUN echo  " node version:    $(node -v) \n" \
-  "npm version:     $(npm -v) \n" \
-  "yarn version:    $(yarn -v) \n" \
-  "debian version:  $(cat /etc/debian_version) \n" \
-  "user:            $(whoami) \n"
-
-# https://github.com/cypress-io/cypress-docker-images/blob/master/browsers/node14.19.0-chrome100-ff99-edge/Dockerfile
-FROM cypress-base as cypress-browser
+FROM cypress/base:14.17.6
 
 USER root
 
 RUN node --version
 
-# Install dependencies
+# Chrome dependencies
 RUN apt-get update && \
   apt-get install -y \
   fonts-liberation \
-  git \
   libcurl4 \
   libcurl3-gnutls \
   libcurl3-nss \
   xdg-utils \
   wget \
   curl \
-  # firefox dependencies
-  bzip2 \
-  # add codecs needed for video playback in firefox
-  # https://github.com/cypress-io/cypress-docker-images/issues/150
-  mplayer \
-  # edge dependencies
-  gnupg \
-  dirmngr \
   # clean up
   && rm -rf /var/lib/apt/lists/* \
   && apt-get clean
@@ -115,65 +25,80 @@ RUN wget --no-verbose /usr/src/libappindicator3-1_0.4.92-7_amd64.deb "http://ftp
   rm -f /usr/src/libappindicator3-1_0.4.92-7_amd64.deb
 
 # install Chrome browser
-RUN wget --no-verbose -O /usr/src/google-chrome-stable_current_amd64.deb "http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_100.0.4896.88-1_amd64.deb" && \
+RUN wget --no-verbose -O /usr/src/google-chrome-stable_current_amd64.deb "http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_100.0.4896.60-1_amd64.deb" && \
   dpkg -i /usr/src/google-chrome-stable_current_amd64.deb ; \
   apt-get install -f -y && \
   rm -f /usr/src/google-chrome-stable_current_amd64.deb
 
 # "fake" dbus address to prevent errors
 # https://github.com/SeleniumHQ/docker-selenium/issues/87
-ENV DBUS_SESSION_BUS_ADDRESS=/dev/null
 
-# versions of local tools
-RUN echo  " node version:    $(node -v) \n" \
-  "npm version:     $(npm -v) \n" \
-  "yarn version:    $(yarn -v) \n" \
-  "debian version:  $(cat /etc/debian_version) \n" \
-  "Chrome version:  $(google-chrome --version) \n" \
-  "git version:     $(git --version) \n" \
-  "whoami:          $(whoami) \n"
+ARG APP
+ARG APP_DIST_HOME
 
-# a few environment variables to make NPM installs easier
-# good colors for most applications
-ENV TERM=xterm
-# avoid million NPM install messages
-ENV npm_config_loglevel=warn
-# allow installing when the main user is root
-ENV npm_config_unsafe_perm=true
+ENV APP=${APP}
+ENV APP_DIST_HOME=${APP_DIST_HOME}
 
-# https://github.com/cypress-io/cypress-docker-images/blob/master/included/9.7.0/Dockerfile
-FROM cypress-browser as cypress-included
-
-# avoid too many progress messages
-# https://github.com/cypress-io/cypress/issues/1243
+WORKDIR ${APP_DIST_HOME}
 ENV CI=1 \
 # disable shared memory X11 affecting Cypress v4 and Chrome
 # https://github.com/cypress-io/cypress-docker-images/issues/270
+  DBUS_SESSION_BUS_ADDRESS=/dev/null \
   QT_X11_NO_MITSHM=1 \
   _X11_NO_MITSHM=1 \
-  _MITSHM=0
+  _MITSHM=0 \
+  # point Cypress at the /root/cache no matter what user account is used
+  # see https://on.cypress.io/caching
+  CYPRESS_CACHE_FOLDER=/root/.cache/Cypress \
+  # Allow projects to reference globally installed cypress
+  NODE_PATH=/usr/local/lib/node_modules
+
+RUN echo "whoami: $(whoami)" \
+  && npm config -g set user $(whoami) \
+  # command "id" should print:
+  # uid=0(root) gid=0(root) groups=0(root)
+  # which means the current user is root
+  && id \
+  && npm install -g "cypress@10.2.0" "@testing-library/cypress" \
+  && cypress verify \
+  # Cypress cache and installed version
+  # should be in the root user's home folder
+  && cypress cache path \
+  && cypress cache list \
+  && cypress info \
+  && cypress version \
+  # give every user read access to the "/root" folder where the binary is cached
+  # we really only need to worry about the top folder, fortunately
+  && ls -la /root \
+  && chmod 755 /root \
+  # NPM does not need to be installed as it is already included with Node.
+  # Show where Node loads required modules from
+  && node -p 'module.paths' \
+  # should print Cypress version
+  # plus Electron and bundled Node versions
+  && cypress version \
+  && echo  " node version:    $(node -v) \n" \
+    "npm version:     $(npm -v) \n" \
+    "debian version:  $(cat /etc/debian_version) \n" \
+    "user:            $(whoami) \n" \
+    "chrome:          $(google-chrome --version || true) \n"
+
+# a few environment variables to make NPM installs easier
+# good colors for most applications
+ENV TERM xterm \
+# avoid million NPM install messages
+ENV npm_config_loglevel warn \
+# allow installing when the main user is root
+ENV npm_config_unsafe_perm true
 
 
-FROM cypress-included as output-cypress
-
-RUN apt-get update && apt-get install jq -y \
-  # clean up
-  && rm -rf /var/lib/apt/lists/* \
-  && apt-get clean
-
-RUN addgroup runners && adduser runner && adduser runner runners
-RUN mkdir /out && chown runner /out
+ENV TEST_ENVIRONMENT=dev
 ENV CYPRESS_VIDEOS_FOLDER=/out/videos
 ENV CYPRESS_SCREENSHOTS_FOLDER=/out/screenshots
-ENV PATH=./node_modules/.bin:${PATH}
-USER runner
+ENV CYPRESS_DOWNLOADS_FOLDER=/out/downloads
 
-WORKDIR /app
+RUN touch cachebust12
+COPY ${APP_DIST_HOME}/ /${APP_DIST_HOME}
+RUN ls -al /${APP_DIST_HOME}
 
-RUN npm install typescript cypress@10 @testing-library/cypress
-
-ARG APP_HOME
-
-ADD ${APP_HOME} .
-
-ENTRYPOINT [ "/app/entrypoint.sh" ]
+ENTRYPOINT ["cypress", "run", "--browser", "chrome"]
