--- a/scripts/ci/Dockerfile.cypress
+++ b/scripts/ci/Dockerfile.cypress
@@ -36,8 +36,8 @@ RUN wget --no-verbose -O /usr/src/google-chrome-stable_current_amd64.deb "http:/
 ARG APP
 ARG APP_DIST_HOME
 
-ENV APP=${APP}
-ENV APP_DIST_HOME=${APP_DIST_HOME}
+ENV APP=${APP} \
+    APP_DIST_HOME=${APP_DIST_HOME}
 
 WORKDIR ${APP_DIST_HOME}
 ENV CI=1 \
@@ -86,19 +86,36 @@ RUN echo "whoami: $(whoami)" \
 # a few environment variables to make NPM installs easier
 # good colors for most applications
 ENV TERM xterm \
-# avoid million NPM install messages
-ENV npm_config_loglevel warn \
-# allow installing when the main user is root
-ENV npm_config_unsafe_perm true
+    # avoid million NPM install messages
+    npm_config_loglevel warn \
+    # allow installing when the main user is root
+    npm_config_unsafe_perm true
 
-
-ENV TEST_ENVIRONMENT=dev
-ENV CYPRESS_VIDEOS_FOLDER=/out/videos
-ENV CYPRESS_SCREENSHOTS_FOLDER=/out/screenshots
-ENV CYPRESS_DOWNLOADS_FOLDER=/out/downloads
+ENV TEST_ENVIRONMENT=dev \
+  CYPRESS_VIDEOS_FOLDER=/out/videos \
+  CYPRESS_SCREENSHOTS_FOLDER=/out/screenshots \
+  CYPRESS_DOWNLOADS_FOLDER=/out/downloads
 
 RUN touch cachebust12
 COPY ${APP_DIST_HOME}/ /${APP_DIST_HOME}
+
+# give every user read access to the "/root" folder where the binary is cached
+# we really only need to worry about the top folder.
+RUN ls -la /root
+RUN chmod 755 /root
+
+RUN chown -R node:node /${APP_DIST_HOME}
+
+USER node
+# show user effective id and group - it should be non-zero
+# meaning the current user "node" is not root
+RUN id
+
+# user "node" should be able to access the Cypress test runner now
+RUN ls -la /root/.cache/Cypress/*/Cypress
+RUN cat /root/.cache/Cypress/*/Cypress/vk_swiftshader_icd.json
+
+# user "node" should be able to access the dist folder
 RUN ls -al /${APP_DIST_HOME}
 
 ENTRYPOINT ["cypress", "run", "--browser", "chrome"]
