--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -152,6 +152,11 @@
 /apps/services/contentful-entry-tagger/                                                             @island-is/stefna
 /apps/web/screens/Organization/                                                                     @island-is/stefna
 /apps/web/components/Organization/                                                                  @island-is/stefna
+/apps/web/components/ChatPanel/                                                                     @island-is/stefna
+/apps/web/components/Form/                                                                          @island-is/stefna
+/apps/web/components/Stepper/                                                                       @island-is/stefna
+/apps/web/hooks/useFeatureFlag.ts                                                                   @island-is/stefna
+/apps/web/utils/featureFlag/                                                                        @island-is/stefna
 /libs/content-search-toolkit/                                                                       @island-is/stefna @island-is/juni
 /libs/content-search-index-manager/                                                                 @island-is/stefna @island-is/juni
 /libs/content-search-metrics/                                                                       @island-is/stefna @island-is/juni
