--- a/libs/application/templates/operating-license/project.json
+++ b/libs/application/templates/operating-license/project.json
@@ -16,6 +16,12 @@
       "options": {
         "command": "yarn ts-node -P libs/localization/tsconfig.lib.json libs/localization/scripts/extract libs/application/templates/operating-license/src/lib/messages.ts"
       }
+    },
+    "schemas/codegen": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "command": "graphql-codegen --config libs/application/templates/operating-license/codegen.yml"
+      }
     }
   }
 }
