Update download-service for vehicle pdf

--- a/libs/clients/vehicles/src/clientConfig.json
+++ b/libs/clients/vehicles/src/clientConfig.json
@@ -31,7 +31,7 @@
             "description": "Success",
             "content": {
               "application/pdf": {
-                "schema": { "type": "string", "format": "byte" }
+                "schema": { "type": "string", "format": "binary" }
               }
             }
           },
@@ -52,7 +52,7 @@
             "description": "Success",
             "content": {
               "application/pdf": {
-                "schema": { "type": "string", "format": "byte" }
+                "schema": { "type": "string", "format": "binary" }
               }
             }
           },
