chore(core): Fix hot reloading of node servers in development.

--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -6,7 +6,7 @@
   "generators": {},
   "targets": {
     "build": {
-      "executor": "@anatine/esbuildnx:build",
+      "executor": "./tools/executors/node:build",
       "options": {
         "outputPath": "dist/apps/api",
         "main": "apps/api/src/main.ts",
