--- a/apps/download-service/project.json
+++ b/apps/download-service/project.json
@@ -5,7 +5,7 @@
   "prefix": "download-service",
   "targets": {
     "build": {
-      "executor": "@anatine/esbuildnx:build",
+      "executor": "./tools/executors/node:build",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/download-service",
