--- a/apps/github-actions-cache/project.json
+++ b/apps/github-actions-cache/project.json
@@ -5,7 +5,7 @@
   "prefix": "github-actions-cache",
   "targets": {
     "build": {
-      "executor": "@anatine/esbuildnx:build",
+      "executor": "./tools/executors/node:build",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/github-actions-cache",
