--- a/apps/icelandic-names-registry/backend/project.json
+++ b/apps/icelandic-names-registry/backend/project.json
@@ -5,7 +5,7 @@
   "prefix": "icelandic-names-registry-backend",
   "targets": {
     "build": {
-      "executor": "@anatine/esbuildnx:build",
+      "executor": "./tools/executors/node:build",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/icelandic-names-registry/backend",
