--- a/apps/judicial-system/message-handler/project.json
+++ b/apps/judicial-system/message-handler/project.json
@@ -5,7 +5,7 @@
   "prefix": "judicial-system-message-handler",
   "targets": {
     "build": {
-      "executor": "@anatine/esbuildnx:build",
+      "executor": "./tools/executors/node:build",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/judicial-system/message-handler",
