--- a/apps/judicial-system/xrd-api/project.json
+++ b/apps/judicial-system/xrd-api/project.json
@@ -6,7 +6,7 @@
   "generators": {},
   "targets": {
     "build": {
-      "executor": "@anatine/esbuildnx:build",
+      "executor": "./tools/executors/node:build",
       "options": {
         "outputPath": "dist/apps/judicial-system/xrd-api",
         "main": "apps/judicial-system/xrd-api/src/main.ts",
