--- a/apps/services/auth-api/project.json
+++ b/apps/services/auth-api/project.json
@@ -25,7 +25,7 @@
       }
     },
     "esbuild": {
-      "executor": "@anatine/esbuildnx:build",
+      "executor": "./tools/executors/node:build",
       "options": {
         "outputPath": "dist/apps/services/auth-api",
         "main": "apps/services/auth-api/src/main.ts",
