--- a/apps/services/contentful-entry-tagger/project.json
+++ b/apps/services/contentful-entry-tagger/project.json
@@ -5,7 +5,7 @@
   "prefix": "services-contentful-entry-tagger",
   "targets": {
     "build": {
-      "executor": "@anatine/esbuildnx:build",
+      "executor": "./tools/executors/node:build",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/services/contentful-entry-tagger",
