--- a/apps/services/user-notification/project.json
+++ b/apps/services/user-notification/project.json
@@ -11,7 +11,7 @@
       }
     },
     "build": {
-      "executor": "@anatine/esbuildnx:build",
+      "executor": "./tools/executors/node:build",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/services/user-notification",
