chore(system-e2e): package code similar to other services so it use code outside of its workspace (#8143)
* Getting started with transpiling TS to JS

* build: extend Cypress official docker image, custom webpack for system-e2e

* test: improved Dockerfile, testing webpack and tsconfig settings

* build: extend Cypress official docker image, custom webpack for system-e2e

* build: refactor Dockerfile.cypress, fixed webpack external deps bug

* build: rootless cypress image

* build: webpack cleanup

* chore: cleanup

* build: improved _docker.sh for dynamic build-args, cleanup

* test: update types and improve skilavottord, better Dockerfile

* build: bump google version in Dockerfile.cypress

* build: validate on APP env instead of dockerfile

* ci: improved _docker.sh, cleanup

Co-authored-by: Jón Levy <levy@andes.is>

--- a/apps/system-e2e/project.json
+++ b/apps/system-e2e/project.json
@@ -5,17 +5,45 @@
   "prefix": "system-e2e",
   "generators": {},
   "targets": {
+    "build": {
+      "builder": "@nrwl/node:webpack",
+      "options": {
+        "outputPath": "dist/apps/system-e2e",
+        "main": "",
+        "tsConfig": "apps/system-e2e/tsconfig.json",
+        "webpackConfig": "apps/system-e2e/webpack.config.js",
+        "maxWorkers": 2,
+        "assets": []
+      },
+      "configurations": {
+        "production": {
+          "optimization": true,
+          "extractLicenses": true,
+          "inspect": false
+        }
+      },
+      "outputs": ["{options.outputPath}"]
+    },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
         "lintFilePatterns": ["apps/system-e2e/**/*.{ts,tsx,js,jsx}"]
       }
     },
-    "system-test": {
+    "smoke-test": {
       "executor": "@nrwl/cypress:cypress",
       "options": {
         "cypressConfig": "apps/system-e2e/cypress.config.ts",
-        "tsConfig": "apps/system-e2e/tsconfig.json"
+        "tsConfig": "apps/system-e2e/tsconfig.json",
+        "spec": "**/integration/**/smoke-test/*.spec.{ts,js}"
+      }
+    },
+    "acceptance-test": {
+      "executor": "@nrwl/cypress:cypress",
+      "options": {
+        "cypressConfig": "apps/system-e2e/cypress.config.ts",
+        "tsConfig": "apps/system-e2e/tsconfig.json",
+        "spec": "**/integration/**/acceptance-test/*.spec.{ts,js}"
       }
     },
     "docker-cypress": {}
