fix: revert persidno lookup changes

--- a/libs/clients/vehicles/src/clientConfig.json
+++ b/libs/clients/vehicles/src/clientConfig.json
@@ -1303,27 +1303,8 @@
       "PersidnoLookupResult": {
         "type": "object",
         "properties": {
-          "type": {
-            "type": "string",
-            "nullable": true
-          },
-          "title": {
-            "type": "string",
-            "nullable": true
-          },
-          "status": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "detail": {
-            "type": "string",
-            "nullable": true
-          },
-          "instance": {
-            "type": "string",
-            "nullable": true
-          }
+          "data": { "$ref": "#/components/schemas/PersidnoLookup" },
+          "nextCursor": { "type": "string", "nullable": true }
         },
         "additionalProperties": false
       },
